Moved states into ai-state.h, added member functions

--- a/ai-core/ai-core/ai-core.vcproj
+++ b/ai-core/ai-core/ai-core.vcproj
@@ -180,6 +180,14 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\ai-core.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ai-states.h"
+				>
+			</File>
+			<File
 				RelativePath=".\BaseGameEntity.h"
 				>
 			</File>
