Moved more things around into appropriate place. No compile

--- a/ai-core/ai-core/ai-core.vcproj
+++ b/ai-core/ai-core/ai-core.vcproj
@@ -166,6 +166,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ai-states.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ai-test.cpp"
 				>
 			</File>
